# dbt_az_usuarios

./: .sqlfluff  .user.yml  Dockerfile  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
.astro/: config.yaml
.github/worflows/: CI.yml
.github/workflows/: CI.yml
dags/: user.py  user_detail.py  user_detail_dag.py
include/: carga_duckdb.py  constants.py  profiles.py
macros/: generate_schema_name.sql
models/marts/: acao_total_usuarios_logados.sql  acao_total_usuarios_logados.yml  navegador_count.yml  tempo_permanecia_no_sistema.yml
models/raw/: raw_dl_acessos.sql
models/staging/: stg_acessos_legado.yml
seeds/: dl_acessos.csv
snapshots/: usuario_snapshot.sql  usuario_snapshot.yml
usuarios/: dbt_project.yml
usuarios/models/marts/: acao_total_usuarios_logados.sql  navegador_count.sql  sistemas_mais_usuarios.sql  sistemas_mais_usuarios.yml  tempo_permanencia_no_sistema.sql
usuarios/models/raw/: raw_dl_acessos.sql
usuarios/models/staging/: __sources.yml  stg_acessos.sql  stg_acessos.yml  stg_acessos_legado.sql
usuarios/seeds/: dl_acessos.csv
usuarios/snapshots/: usuario_snapshot.sql  usuario_snapshot.yml
